fixed overflowing value bug

--- a/src/Comp/ColorPicker/ColorRangeGroup.styles.scss
+++ b/src/Comp/ColorPicker/ColorRangeGroup.styles.scss
@@ -77,6 +77,8 @@
 
     .range {
         margin: auto;
+        width: 100%;
+        height: 14px;
     }
 
     .range:focus {
